refactor: start refactoring subscription-service architecture & update routers in whole app
